# wasm-bindgen-clipboard-example

./: Cargo.toml  README.md  index.html  main.js
crates/clipboard/: Cargo.toml  build.rs
crates/clipboard/src/: lib.rs
crates/clipboard/webidls/: clipboard.webidl
src/: lib.rs
