[package]
name = "wasm-bindgen-clipboard"
version = "0.1.0"
authors = ["Kenichi Ishibashi"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"
js-sys = "0.3.32"

clipboard = { path = "crates/clipboard" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "EventTarget",
  "Navigator",
  "Window",
]

[workspace]
members = [
  "crates/clipboard",
]